plex/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    app: plex
  ports:
    - name: plex
      port: 32400
      targetPort: 32400
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 10.99.5.126
