plex/50-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-internal
  namespace: plex
spec:
  hostnames:
    - plex.internal.white.fm
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plex
          port: 32400
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
